2011-03-09  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (gcry_kdf_algos): New.
	(gcry_kdf_derive): New.
	* visibility.c (gcry_kdf_derive): New.
	* visibility.h, libgcrypt.vers, libgcrypt.def: Add gcry_kdf_derive.

2011-02-23  Werner Koch  <wk@g10code.com>

	* libgcrypt-config.in: Add option --host.
	* libgcrypt.m4: Use AC_PROG_TOOL to find the config script.  Print
	a warning is the config scripts does not match the configure host.

2011-02-21  Werner Koch  <wk@g10code.com>

	* global.c (gcry_check_version): Do not take the patchlevel in
	account; it is not well defined.

2011-02-17  Werner Koch  <wk@g10code.com>

	* gcrypt-module.h (gcry_cipher_register, gcry_cipher_unregister)
	(gcry_pk_register, gcry_pk_unregister, gcry_md_register)
	(gcry_md_unregister): Mark as deprecated by the API; in a future
	version the module register feature will be removed.

	* gcrypt.h.in: Attribute all _ac_ functions and types as
	deprecated by the API.

	* hwfeatures.c (detect_ia32_gnuc): Fix AES-NI detection.  Use AND
	instead of SUB for bit testing.

2011-02-16  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (GCRYCTL_DISABLE_HWF): New.
	* global.c (_gcry_vcontrol): Support new control code.
	(print_config): Factor list of hwfeatures out to ...
	(hwflist): new.
	(disabled_hw_features): New.
	(global_init): Pass new variable to _gcry_detect_hw_features.
	* hwfeatures.c (_gcry_detect_hw_features): Add arg
	DISABLED_FEATURES and disable detected features.

2011-02-11  Werner Koch  <wk@g10code.com>

	* g10lib.h (HWF_INTEL_AES): Rename to HWF_INTEL_AESNI.
	* hwfeatures.c (detect_ia32_gnuc): Fix setting of this flag.

2011-02-01  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (gcry_pk_get_curve, gcry_pk_get_param): New.
	* libgcrypt.vers (gcry_pk_get_curve, gcry_pk_get_param): Add.
	* libgcrypt.def (gcry_pk_get_curve, gcry_pk_get_param): Add.
	* visibility.c (gcry_pk_get_curve, gcry_pk_get_param): New.
	* cipher-proto.h (pk_extra_spec): Add fields GET_CURVE and
	GET_CURVE_PARM.
